List of changes from version 3.0 to 3.0.2 (until February 22nd, 2014)
     - inclusion of scanner and parser code for Newick tree format (GPL licence), easier installation of 
       comparative augustus functionality
     - therefore release under more restrictive GPL licence (the plan is to replace this later
       and switch back to the more permissive and non-viral artistic open source licence)
     - drop requirement to set environment variable AUGUSTUS_CONFIG_PATH
     - bugfixes (etraining: "not Genbank format", gtf2gff.pl, compilation warning)
List of changes from version 2.7 to 3.0 (until January 8th, 2014)
     - comparative gene prediction (cgp) mode to predict genes in several aligned genomes simultaneously (see README-cgp.txt)
     - load2db program to load genomes and hint GFF files into a database for random access retrieval (e.g. with new program getSeq)
     - new parameter --temperature for heating the distribution and obtaining more gene structures during sampling
     - bacterial genes may now also be nested
     - new script weedMaf.pl that throws out gap-only columns from MSAs
     - added prokaryotic template parameters for training new prokaryotic species (on the basis of E_coli_K12 parameters)
     - new species coyote_tobacco (Nicotiana attenuata), thermoanaerobacter_tengcongensis, wheat
     - ATG is not anymore the only start codon
     - filterMaf.pl takes an alignment in MAF format and extracts alignment blocks given a subset of species or a genomic interval
     - bugfixes (in particular segfault on MAC, small memory leaks)
List of changes from version 2.6.1 to 2.7 (until March 4th, 2013)
     - support for prokaryotic genomes (overlapping genes, arbitrary sets of start codons)
       --genemodel=bacterium still preliminary
     - new species chicken, xenoturbella, heliconius_melpomene1, cacao (Don Gilbert)
     - improved species tribolium2012
     - speedup of bam2hints, filterBam (by a very large factor in cases of large headers)