@@ -1,6 +1,6 @@
 # Definitions common to all Makefiles
 # This file is included from other Makefiles in the augustus project.
-AUGVERSION = 3.0.2
+AUGVERSION = 3.0.3
 
 # make this a comment if you get compilation errors about the boost iostreams library
 # cannot install this library and do not need to input gzipped input genome files
@@ -14,4 +14,4 @@ MYSQL = true
 
 # uncomment this line to enable access to SQLite databases that store
 # file offsets of sequence data in flat files and hints
-# SQLITE = true
+SQLITE = true
