@@ -1,19 +1,0 @@
-# For some users it may be convenient to access sequences in a database
-# as opposed to sequences in flat files.
-# This option requires
-#     1) the compilation of the library mysql++
-# and 2) the (re)compilation of the augustus sources with the MYSQL = true in common.mk
-
-#***** compilation of the library mysql++ *******
-# get header files for mysql, on Ubuntu:
-sudo apt-get install libmysqlclient-dev
-
-# the sources of the mysql++ API are in the folder mysql++
-# they are a minor edit (compilation errors and warnings) of the sources from
-# http://www.tangentsoft.net/mysql++/releases/mysql++-3.1.0.tar.gz
-# follow the compilation instructions in the folder mysql++:
-./configure
-make
-sudo make install
-# don't forgeet to register changes wrt shared objects in system
-sudo ldconfig
